--- a/index.html
+++ b/index.html
@@ -68,6 +68,77 @@
   </div>
   <hr>
   <div id="updates">
+    <div id="U61">
+      <div class="header">
+        <h2>Update 61: Vecna Unleashed</h2>
+        <p>August 16th, 2023</p>
+      </div>
+      <div class="features">
+        <h3>Main Features:</h3>
+        <ul>
+          <li>Vecna Unleashed Itemization<ul>
+            <li>Augments</li>
+            <li>Treasure Tables</li></ul></li>
+        </ul>
+      </div>
+      <div class="balance">
+        <h3>Balance and Small Features:</h3>
+        <ul>
+          <li>Harper Agent cores 1, 6, and 18 now give +1 To-hit and Damage and not just hit/damage versus Evil.</li>
+          <li>Harper Agent's Core 20 now gives +2 to all ability scores, +1 hit/damage, +5 hit/damage vs Evil, and +20 Universal Spell Power.</li>
+          <li>Harper Agent's Weathered Traveler Tier 1 now gives 2/4/6 Energy Resistance.</li>
+          <li>Swashbuckler's Battering Barrage cost reduced from 2/rank to 1/rank.</li>
+          <li>Swashbuckler's Thread the Needle now gives +5% to-hit (percentage bonus based on precision) while Precision is toggled on.</li>
+          <li>Warchanter's Spinning Ice, Frozen Fury, and Skaldic Scream now use the highest of Dexterity, Charisma, or Strength for their DCs.</li>
+          <li>Warchanter's Spinning Ice, Frozen Fury, and Skaldic Scream's DCs are now (0x bard level / 1/2 bard level / 1x bard level) and (10/12/14) (Skaldic Scream is 1x bard level and 14.)</li>
+          <li>Warchanter's Spinning Ice is now a 3/4/5[W] Cleave.</li>
+          <li>Warchanter's Northwind's cost has been reduced from 2/rank to 1/rank.</li>
+          <li>Sorcerer Savant Tier 5 Actives scale with highest of Charisma or Constitution, and not just Constitution.</li>
+          <li>Earth Savant's Earthen Armor is now +3/+6 Armor Class.</li>
+          <li>Ninja Spy's Tier 2 and Tier 4 Dark Ki upgrades now grant +1 to hit and +2 to damage to match similar enhancement lines.</li>
+          <li>Ninja Spy's Touch of Despair now grants +3 To-hit and +3 to damage to match similar enhancement lines.</li>
+          <li>Shintao's Tier 2 and Tier 4 Light Ki upgrades now grant +1 To-hit and +2 to damage to match similar enhancement lines.</li>
+          <li>Henshin Mystic's Lighting the Candle now applies the fire portion of its imbue to Ki Spells.</li>
+          <li>Quivering Palm has a new DC formula: DC 10 + monk level + highest of Dex or Wis mod + assassinate bonuses.</li>
+          <li>All of the active poison attacks in the Assassin tree's poison line are now +3W, use full rogue level for their DCs instead of half, factor in assassinate bonuses for their DC, and now make certain enemies that would be immune to poison, weak to poison.<ul>
+            <li>Ice Chill = Undead</li>
+            <li>Heartseeker = Elementals</li>
+            <li>Soulshatter = Outsiders</li></ul></li>
+          <li>Kukris now function with the Vistani Knife Fighter tree, with the exception of the core 12, which only gives +1 multiplier (this keeps them in parity crit-wise with daggers as they naturally have +1 threat range over them.)</li>
+          <li>Archmage's Master of Magic now also grants +20 Universal Spell Power, and increases from +2 Intelligence to +4 Intelligence.</li>
+          <li>Archmage's Efficient Metamagics have their Action Point cost reduced from 2 to 1, since AM having metamagics be good seems flavorful.</li>
+          <li>Archmage's Spell Penetration has its AP cost reduced from 2 to 1.</li>
+          <li>Archmage's Energy of the Scholar has its AP cost reduced from 2 to 1, matching other trees.</li>
+          <li>Archmage's Cores 12 and 18 now grant a generic +1 to caster level and max caster level.</li>
+          <li>Vanguard's Stunning Shield cooldown reduced to 45/30/15 seconds.</li>
+          <li>Vanguard's Shield Rush cooldown reduced to 40/30/20 seconds.</li>
+        </ul>
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>Ravager's Laughter now reliably adds Fury to your character.</li>
+          <li>The Challenge XP panel is no longer a string table error.</li>
+          <li>Consecration now heals Hirelings (note: this note was erroneously in U60 release but is actually here.)</li>
+          <li>When you have items in the Store queue and clear the queue, the queue icon now properly clears itself from you when the queue is empty.</li>
+          <li>Lighting the Candle's buff now has the correct text for real this time.</li>
+          <li>Equipping a Rune Arm should no longer hide your main hand weapon.</li>
+          <li>Archmage's Heighten Metamagic no longer erroneously requires character level 12</li>
+          <li>Shield Specialization line's damage bonus is now visible to the player.</li>
+          <li>Nature's Protector's natural armor bonus now correctly stacks.</li>
+        </ul>
+      </div>
+      <div class="engineering">
+        <h3>Engineering:</h3>
+        <ul>
+          <li>Tomes of Learning and Epic Tomes of Learning (both Greater and Lesser) have been upgraded and now check each tier of difficulty independently to determine if you are "repeating" a quest. This means that completing a dungeon on Heroic will not count as "completed" for the Epic tome, so you'll be eligible for the Tome's first time bonus again separately.</li>
+          <li>You can no longer move the Rune Arm Charge UI. This change corrects an issue that was making it sometimes difficult to attack while charging a Rune Arm.</li>
+        </ul>
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U60">
       <div class="header">
         <h2>Update 60: Vecna Unleashed Prepurchase</h2>
