--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
           <li>Archmage's Heighten Metamagic no longer erroneously requires character level 12</li>
           <li>Shield Specialization line's damage bonus is now visible to the player.</li>
           <li>Nature's Protector's natural armor bonus now correctly stacks.</li>
+          <li class="patch">Randall Lyric now has his proper pack-specific materials in his trades.</li>
+          <li class="patch">Melee Vistani Knife Fighter attacks now require their proper weapons.</li>
         </ul>
       </div>
       <div class="engineering">
