--- a/index.html
+++ b/index.html
@@ -112,6 +112,27 @@
           <li>Archmage's Cores 12 and 18 now grant a generic +1 to caster level and max caster level.</li>
           <li>Vanguard's Stunning Shield cooldown reduced to 45/30/15 seconds.</li>
           <li>Vanguard's Shield Rush cooldown reduced to 40/30/20 seconds.</li>
+          <li class="patch">The Action Point cost of Swashbuckler's Double Strike Action Boost has been reduced to 1 action point per rank.</li>
+          <li class="patch">Damage dice of Archmage's damaging SLAs have been increased to match modern values.</li>
+          <li class="patch">Archmage's damaging SLAs now scale with highest of all spell schools.</li>
+          <li class="patch">Archmage's Energy of the Scholar's Spell Point cost has been increased to 100 in its third rank.</li>
+          <li class="patch">Harper Agent's Universal Spell Power has been increased so that 1 Melee/Ranged Power = 3 Universal.</li>
+          <li class="patch">Sorcerer's Tier 5 Spell Like Abilities now scale with Evocation and Conjuration.</li>
+          <li class="patch">Vistani's Fan of Knives now breaks breakables.</li>
+          <li class="patch">Frenzied Berzerker's Power Rage has had its Action Point cost reduced to 1 per rank.</li>
+          <li class="patch">Ninja Spy's Diversion now grants +5 to Assassinate DCs when active.</li>
+          <li class="patch">Ninja Spy's Shadow Double Tier 5 now grants +5 Assassinate DCs when active.</li>
+          <li class="patch">Ninja Spy's Crippling Strike Tier 5 now grants +3 Assassinate DCs.</li>
+          <li class="patch">Ninja Spy's Critical Multiplier in Core 20 moves to Core 18.</li>
+          <li class="patch">Ninja Spy's Flash Bang and Touch of Death now factor in Assassinate bonuses.</li>
+          <li class="patch">Ninja Spy's Poison Exploits now scales with higher of Melee/Ranged Power.</li>
+          <li class="patch">Ninja Spy's Deadly Exploits is now fixed, is 1 rank 2AP, causes your poison exploit to deal double damage, and scales with higher of melee/ranged power.</li>
+          <li class="patch">Warpriest/Warsoul's Divine Vessel is now just a Cleave, no stack requirements.</li>
+          <li class="patch">Falconry's Practiced Accuracy now has a 3rd rank.</li>
+          <li class="patch">Nature's Protector's Rage of the Beast, Primal Beast, and Enduring Beast now have 3rd ranks.</li>
+          <li class="patch">Battle Engineer's Critical Multiplier in Core 20 moves to Core 12.</li>
+          <li class="patch">Dark Apostate's Imbue dice moved to 1d8 to match other Spell Power scaling imbues.</li>
+          <li class="patch">Arcanotechnician's Core 1 is now: you gain 5 Electric, Force, and Fire spell power per core, and 1 universal spell power per point spent in the tree.</li>
         </ul>
       </div>
       <div class="bugfixes">
@@ -128,6 +149,10 @@
           <li>Nature's Protector's natural armor bonus now correctly stacks.</li>
           <li class="patch">Randall Lyric now has his proper pack-specific materials in his trades.</li>
           <li class="patch">Melee Vistani Knife Fighter attacks now require their proper weapons.</li>
+          <li class="patch">Unequipping a Glamered or Cosmetic bow will no longer break your animations or combat style.</li>
+          <li class="patch">Electrocution in Stormsinger now has its correct tooltip text.</li>
+          <li class="patch">Bonus DCs for Quivering Palm are now at their proper +4 per stack instead of +2.</li>
+          <li class="patch">Harper Leadership now has its proper minimum level.</li>
         </ul>
       </div>
       <div class="engineering">
