--- a/index.html
+++ b/index.html
@@ -68,6 +68,100 @@
   </div>
   <hr>
   <div id="updates">
+    <div id="U62">
+      <div class="header">
+        <h2>Update 62: Attack of the Night Revels</h2>
+        <p>October 4th, 2023</p>
+      </div>
+      <div class="features">
+        <h3>Main Features:</h3>
+        <ul>
+          <li>Active Attacks Rebalance<ul>
+            <li>All active attacks in the game have been rebalanced with a new +%damage scalar instead of using +W</li>
+          </ul></li>
+          <li>Weapon Scaling Rebalance<ul>
+            <li>All weapons in the game have had their W scalar set to level-appropriate values on a new modern curve</li>
+          </ul></li>
+        </ul>
+      </div>
+      <div class="balance">
+        <h3>Balance and Small Features:</h3>
+        <ul>
+          <li>Monk combo builders now deal +10% damage, and their alignment based builders deal +15% damage.</li>
+          <li>Monk Finishers now deal +30% damage.</li>
+          <li>Touch of Death now deals +30% damage.</li>
+          <li>Touch of Despair now scales with the highest of Dexterity or Wisdom and uses Assassinate DCs to determine its DC.</li>
+          <li>Stormsinger's Metamagic costs are now set to the standard Action Point cost for Metamagic enhancements (2Action Point each), and their antirequisites have been fixed.</li>
+          <li>Spell Power scaling Imbues have been standardized: They are all now 1d8 damage per Imbue dice and all now scale with 75% Spell Power instead of 100%.</li>
+          <li>Arcane Archer's Force Arrows is now 1 rank 2 Action Point (uses the 3rd rank bonuses).</li>
+          <li>Arcane Archer's True Strike is now 1 rank 2 Action Point (uses 3rd rank bonuses)</li>
+          <li>Arcane Archer's Inferno Shot is now 1 rank 2 Action Point (uses the 3rd rank bonuses) </li>
+          <li>Arcane Archer's Shattermantle Shot is now 1 rank 2 Action Point (uses the 3rd rank bonuses) </li>
+          <li>Arcane Archer's Dispelling Shot is now 1 rank 2 Action Point (uses 3rd rank bonuses)</li>
+          <li>Arcane Archer core 1's enhancement bonus now stacks with everything.</li>
+          <li>Arcane Archer's tier 5 Improved Elemental Arrow's critical hits now scale with Imbue dice, dealing 1d10 per imbue dice on a critical hit, and apply to the Force Arrows imbue. (this replaces the current force arrows on-crit 1d10)</li>
+          <li>Kensei's Tactics is now 1 Action Point per rank.</li>
+          <li>Kensei's Weapon Focus vertical lines and the Exotic Focus enhancement are now 1 Action Point.</li>
+          <li>Dwarf's Shield Mastery's cost has been reduced to 1 Action Point/rank (this also affects human's and Purple Dragon Knight's Fighting Style multiselector).</li>
+          <li>Purple Dragon Knight's Sniper is now +1/2/3d6 Ranged Sneak Attack Dice and +2/4/6 Point Blank Shot distance, and now costs 1 Action Point/rank (this also affects human's Fighting Style multiselector).</li>
+          <li>Vile Chemist's Core 1 is now: +1 Reflex save. Each core ability you take in this tree beyond the first grants +5 Physical Resistance Rating.</li>
+          <li>Vile Chemist's Cores 2, 3, 4, 5, and 6 now grant +5 Poison Spell Power, 2% Dodge, and 2% Dodge cap while in Orchidium instead of their original Orchidium boosts.</li>
+          <li>Vile Chemist's Core 3 is now Hidden Blades I and grants +5 Universal Spell Power, +3% Doublestrike and Doubleshot, and +1 Imbue Dice.</li>
+          <li>Vile Chemist's Core 4 is now Hidden Blades II and grants +5 Universal Spell Power, +3% Doublestrike and Doubleshot, and +1 Imbue Dice, as well as granting you full Base Attack Bonus.</li>
+          <li>Vile Chemist's Core 5 is now Hidden Blades III and grants +5 Universal Spell Power, +3% Doublestrike and Doubleshot, and +1 Imbue Dice, as well as a +1 Competence Bonus to Critical Multiplier with all Simple weapons.</li>
+          <li>Vile Chemist's Core 6 (Venom's Grip) now grants: +4 Intelligence, +10 Universal Spell Power, +3% Doublestrike and Doubleshot, and +2 Imbue Dice.</li>
+          <li>Vile Chemist's Willful Ambition is now Swift Ambition and boosts Reflex saving throws.</li>
+          <li>Vile Chemist New Tier 4: Simple Thrown Mastery: If you have Simple Thrown Expertise, you now use the higher of your Intelligence or Dexterity to determine how much Doubleshot you gain from that feat.</li>
+          <li>Vile Chemist's Sapping Ambition which was very buggy is gone and is now Brushed Aside: You gain the Defensive Roll feat. </li>
+          <li>Apothecary's Core 1 is now: +1 Will save. Each core ability you take in this tree beyond the first grants +5 Positive and Negative Spell Power.</li>
+          <li>Apothecary's Cores 2, 3, 4, 5, and 6 now grant 2% Positive and Negative spell critical damage while in Verdanite instead of their original Verdanite boosts.</li>
+          <li>Apothecary's Core 6 now grants +2 Transmutation DCs passively without requiring Verdanite.</li>
+          <li>Apothecary's Tier 5 Master Apothecary now grants an additional +1 Spell Penetration (since this bonus was removed from Core 3).</li>
+          <li>Apothecary New Tier 4: Magical Toolbelt: 1 rank 2 Action Points: You gain +5% Magical Efficiency (since this bonus was removed from Core 4).</li>
+          <li>Apothecary's Energy of the Scholar rank 3 is now 100 Spell Points.</li>
+          <li>Bombardier's Core 1 is now: +1 Fortitude save. Each core ability you take in this tree beyond the first grants +5 Fire/Cold/Acid/Electric/Poison Spell Power and +1 Burning Ambition Dice.</li>
+          <li>Bombardier's Cores 2, 3, 4, 5, and 6 now grant +2% Fire, Cold, Electric, Acid, and Poison Spell Critical Damage instead of their original Pyrite boosts.</li>
+          <li>Bombardier's Core 6 now grants +2 Conjuration DCs passively without requiring Pyrite.</li>
+          <li>Bombardier's Cores 3, 4, 5 no longer grants Burning Ambition dice inconsistently and now just grants +1 each as per the text of core 1.</li>
+          <li>Bombardier's Cores 3, 4, and 5 now grants +3 caster levels each BUT now require you to take different elements each time.</li>
+          <li>Bombardier's Swift Ambition is now Holistic Ambition and grants Fortitude saving throws.</li>
+          <li>Bombardier's Rapid Condensation SLA has been removed.</li>
+          <li>Bombardier's SLAS have changed: there are now 3 Vial SLAs in tiers 1, 2, and 3. You must take a different Vial element each time.</li>
+          <li>Divine Vessel in Warpriest/Warsoul now deals +30% damage.</li>
+          <li>The following raids now have a small chance to drop +8 Tomes:<ul>
+                <li>Hunt or be Hunted</li>
+                <li>Dryad and the Demigod</li>
+                <li>Skeletons in the Closet</li>
+                <li>Fire Over Morgrave</li></ul></li>
+        </ul>
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>Barbarian's Enhancement Trees have had a few icons corrected.</li>
+          <li>Corrected icons for the Blightcaster Imbue effects.</li>
+          <li>Corrected text in Draconic Incarnation's Epic Strike.</li>
+          <li>Iced Edges no longer falls off you when you die.</li>
+          <li>Vile Chemist's Poisoned Shot now works correctly with crossbows and more reliably applies the Red spell state.</li>
+          <li>The Brightbane Emerald now correctly gives Insightful bonuses instead of Competence.</li>
+          <li>Feral Charge now correctly appears on the Character Sheet.</li>
+          <li>The level 32 Spectral Throwing Dagger now correctly throws itself.</li>
+          <li>The Wrath of Sora Kell set bonus now does what it says on its tooltip.</li>
+        </ul>
+      </div>
+      <div class="engineering">
+        <h3>Engineering:</h3>
+        <ul>
+          <li>A few changes have been made to how we automatically generate tooltips for active attacks. The following statistics are now automatically placed within active abilities' tooltips and no longer need to be added in by hand:<ul>
+            <li>Bonuses to critical threat or multiplier for that attack</li>
+            <li>Cooldown</li>
+            <li>(new) Bonus percentage damage increase for that attack (see the Active Attacks Rebalance for more info!)</li></ul></li>
+        </ul>
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U61">
       <div class="header">
         <h2>Update 61: Vecna Unleashed</h2>
