--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
           <li>Feral Charge now correctly appears on the Character Sheet.</li>
           <li>The level 32 Spectral Throwing Dagger now correctly throws itself.</li>
           <li>The Wrath of Sora Kell set bonus now does what it says on its tooltip.</li>
+          <li>Icefang and Sparkfang have had their damage bypasses swapped to their proper alignments.</li>
         </ul>
       </div>
       <div class="engineering">
