--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
           <li>The level 32 Spectral Throwing Dagger now correctly throws itself.</li>
           <li>The Wrath of Sora Kell set bonus now does what it says on its tooltip.</li>
           <li>Icefang and Sparkfang have had their damage bypasses swapped to their proper alignments.</li>
+          <li class="patch">Expired Ingredients and Keys for Night Revels are no longer auctionable. Expired Ingredients and Keys currently listed on the auctions will fall off at the end of their expiration period and be unable to be re-listed.</li>
+          <li class="patch">Inferno Shot, Dispelling Shot, Shattermantle Shot are now all properly set to +30% damage</li>
+          <li class="patch">Avenging Cleave and Spinning Ice are both now set to 40% bonus damage</li>
+          <li class="patch">Acolyte of the Skin's t5 Lore now correctly grants Necromancy DCs</li>
+          <li class="patch">Exalted Angel's Holy Command and Delayed Judgement now calculate their DCs correctly</li>
+          <li class="patch">Fixed an icon in the Tainted Scholar tree</li>
+          <li class="patch">The ranged version of Artificer's Wracking Shot now scales its damage appropriately</li>
+          <li class="patch">The buff for the Growing Storm in Tempest no longer mentions erroneously that you lose Armor Class</li>
+          <li class="patch">Whirlwind Attack now has its correct damage scalar in its tooltip (+20%)</li>
+          <li class="patch">The Adept, Master, and Grandmaster elemental attacks in Monk now correctly deal increased damage (+10%)</li>
+          <li class="patch">Removed an extraneous Y typo from Legendary Dreadkeeper tooltip</li>
+          <li class="patch">Fixed an issue where some Arcane Archer options were presenting as a multi-selector by mistake</li>
         </ul>
       </div>
       <div class="engineering">
