--- a/index.html
+++ b/index.html
@@ -68,6 +68,66 @@
   </div>
   <hr>
   <div id="updates">
+    <div id="U63">
+      <div class="header">
+        <h2>Update 63: Illithid Invasion</h2>
+        <p>Nov 1st, 2023</p>
+      </div>
+      <div class="features">
+        <h3>Main Features:</h3>
+        <ul>
+          <li>Illithid Invasion Live Server Event</li>
+        </ul>
+      </div>
+      <div class="balance">
+        <h3>Balance and Small Features:</h3>
+        <ul>
+          <li>All 1d8 75% imbues should now be reset to 1d6 at 100% spell power.</li>
+        </ul>
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>Wrack Construct in Battle Engineer now correctly does +10/20/30% damage.</li>
+          <li>Shadowdancer Core 4 now works correctly with Trap the Soul.</li>
+          <li>Apothecary's Satchel now reduces spell costs correctly.</li>
+          <li>Falconry's Tier 2 Sprint Boost now states its correct percentage.</li>
+          <li>Light and Dark is now correctly 3 rank.</li>
+          <li>Holy Smite/Chaos Hammer/Unholy Blight/Order's Wrath from Divine Disciple upgrade now works on Mephits.</li>
+          <li>The first core of Divine Disciple's dark side no longer locks out Core 20 capstones.</li>
+          <li>A typo has been corrected in Avenging Cleave.</li>
+          <li>Feat descriptions from Knight of the Chalice have been removed. </li>
+          <li>Occult Slayer's antimagic action boost now works with things that proc on action boosts.</li>
+          <li>The buffs from the Flasks of Icy Coffee are now dispelled via Rest.</li>
+          <li>The scaling version of Improved Deception now correctly boosts your Bluff and not your Hide skill.</li>
+          <li>Items with Disease Guards now more reliably drop with those Disease Guards correctly attached to the item.</li>
+          <li>New copies of Vinelasher Bracers and Legendary Vinelasher Bracers have a correctly scaling Improved Deception effect.</li>
+          <li>You can now break breakables while under the effects of Fiendish Symbiosis.</li>
+          <li>Several icons have been corrected in Blightcaster.</li>
+          <li>Corrected an icon in Primal Avatar.</li>
+          <li>Holy Retribution now properly scales with Melee and Ranged Power, and the ranged version now correctly restores Smite Evil charges.</li>
+          <li>Dusk Surge in Legendary Dreadnought now properly restores Action Boosts with ranged weapons.</li>
+          <li>Ear Smash is now a +10/20/30% damage scalar.</li>
+          <li>Law of the Divine in Divine Crusader now scales correctly with Melee and Ranged Power.</li>
+          <li>Tabaxi's bonus trip DCs for quarterstaff now correctly increment.</li>
+          <li>A player with the Rune Arm proficiency destiny ability will no longer just lose their offhand sometimes.</li>
+          <li>Fixed a typo in Blight Wolf's tooltip.</li>
+          <li>Fixed a typo in the capstone of Eldritch Knight (both Sorcerer and Wizard.)</li>
+          <li>Some typos in the Legendary Dreadnaught buff bar have been corrected.</li>
+          <li>Fixed a few material type issues on weapons; weapons in Morgrave University are no longer made from bone, for example.</li>
+        </ul>
+      </div>
+      <div class="engineering">
+        <h3>Engineering:</h3>
+        <ul>
+          <li>Doubleshot now properly factors in all on-crit effects to multiply their damage values.</li>
+          <li>Sentient weapons should no longer fit into any recipe that could destroy it.</li>
+        </ul>
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U62">
       <div class="header">
         <h2>Update 62: Attack of the Night Revels</h2>
