--- a/index.html
+++ b/index.html
@@ -68,6 +68,87 @@
   </div>
   <hr>
   <div id="updates">
+    <div id="U64">
+      <div class="header">
+        <h2>Update 64: Chronoscope Rewound</h2>
+        <p>Nov 1st, 2023</p>
+      </div>
+      <div class="features">
+        <h3>Main Features:</h3>
+        <ul>
+          <li>Chronoscope Rewound Itemization</li>
+        </ul>
+      </div>
+      <div class="balance">
+        <h3>Balance and Small Features:</h3>
+        <ul>
+          <li>A copy of the Expansion Pack claim vendors have been added to the Hall of Heroes.</li>
+          <li>The secret loot from Skeletons in the Closet can now be purchased with Raid Runes.</li>
+          <li>There are now mailboxes (well, mail-urns) in each Ravenloft public area.</li>
+          <li>The dialogue options in the Ravenloft transport NPCs have been re-ordered so that the quests appear in the order they are introduced by the arc-giver NPC.</li>
+          <li>Outburst, the Electric End now looks much, much cooler.</li>
+          <li>There is now a Fatespinner in Wynwood Hall!</li>
+        </ul>
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>The Trapsmith's Workshop guild amenity will no longer permanently stick to the inside of your Guild Airship.</li>
+          <li>Nightmare Lance has a more accurate description.</li>
+          <li>Henshin Mystic's Tier 5 Staff Training now correctly requires 5 monk levels and a level 12 character to train.</li>
+          <li>Henshin Mystic's Capstone now reliably applies its +1 Multiplier to your weapon.</li>
+          <li>Chimera's Crown now applies its Deific Warding effect.</li>
+          <li>Chimera's Fang now applies its Parrying and Fortification effects.</li>
+          <li>Epic and Legendary Chimara's Ferocity from the Epic and Legendary versions of Chimera's Fang now apply the correct effects at the correct magnitudes.</li>
+          <li>Gust of Wind's slow portion now has a saving throw.</li>
+          <li>Fixed some typos in the Unyielding Sentinel and Aasimar trees.</li>
+          <li>Wildhunter Deception (Rare) now correctly gives Ranged Power.</li>
+          <li>Shout SLAs from Stormsinger, Spellsinger, and Fatesinger now match the targeting parameters of their base spell, which allows them to heal allies if using Hear My Voice Friend.</li>
+          <li>Alchemist Bombardier's Pyrite Reaction boosts now scale correctly.</li>
+          <li>Zombie Wizards in the Black Loch are now properly zombies and not humans.</li>
+          <li>Fixed some typos in Wheloon and in Morgrave University.</li>
+          <li>Fixed a "Slay Blank" bug in the The Stronghold Key.</li>
+          <li>Fixed some typos in the Harper Agent tree.</li>
+          <li>You can no longer "exit" from a Ravenloft tavern back into the tavern you are currently standing in.</li>
+          <li>Slaying the boss of Thrall of the Fungus Lord no longer reports that you've slain a kobold instead.</li>
+          <li>The targeting description for Displacement in the Archmage Tree is now correct.</li>
+          <li>Magus of the Eclipse's cores now correctly grant Negative Spell Power.</li>
+          <li>Fixed a typo in Shiradi Champion.</li>
+          <li>Eebilsteenk now has a quest chalice!</li>
+          <li>Fixed a typo in Primal Avatar.</li>
+          <li>You can now take the Primal Avatar spell upgrades in Tier 3 (At Its Core) with the corresponding spells instead of requiring the corresponding Tier 1 ability.</li>
+          <li>Melf's Acid Arrow now does its correct damage when cast from a monster (lowered) and a player (raised).</li>
+          <li>Fixed a typo in Turn the Page.</li>
+          <li>An Ogre and a Devil are no longer named "melee" and "ranged".</li>
+          <li>Druidic Survival Mastery now works with all Wild Shapes.</li>
+          <li>Talbron is no longer missing dialogue in Brothers of the Forge.</li>
+          <li>The end boss of Monastery of the Scorpion, Sannyasi, has a lot more chill and won't randomly reset mid-fight anymore.</li>
+          <li>Fixed a typo in Dark Apostate's Light and Dark ability.</li>
+          <li>Friends of Nature: Spider now correctly grants its listed poison absorption.</li>
+          <li>Added clarification to Eldritch Knight imbues that they scale with spell power.</li>
+          <li>Fixed old tooltip on Warsoul imbue.</li>
+          <li>Fixed text on Falconry and Warpriest version of Action Boost: Sprint to clarify that it is an action boost.</li>
+          <li>Clarified Dino Bone crafting augments to make it clear that force spell power affects physical spells and light spell power affects alignment spells.</li>
+        </ul>
+      </div>
+      <div class="engineering">
+        <h3>Engineering:</h3>
+        <ul>
+          <li>The Inventory Drop-Down panel now respects your attack bonus per the feats Spring Attack and Shot On The Run.</li>
+          <li>Hirelings now have a different type of map note compared to players.</li>
+          <li>Abilities that apply on-crit or on-vorpal now correctly Doublestrike to increase their damage.</li>
+          <li>Several changes have been made to how maximum Hit Points are calculated<ul>
+            <li>Logging out while in a public space no longer causes you to have lower Hit Points and Spell Points after you log back in.</li>
+            <li>Bonuses to your Base hit points from Combat Styles are now displayed as a separate portion of your HP on your character sheet instead of being an Effect bonus.</li>
+            <li>Bonuses to your Hit Points and Constitution from Reaper XP are now calculated in a different way behind the scenes.</li>
+            <li>Leveling up now displays a slightly more accurate HP estimation.</li>
+          </ul></li>
+        </ul>
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U63">
       <div class="header">
         <h2>Update 63: Illithid Invasion</h2>
