whoops wrong date

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="U64">
       <div class="header">
         <h2>Update 64: Chronoscope Rewound</h2>
-        <p>Nov 1st, 2023</p>
+        <p>Nov 30th, 2023</p>
       </div>
       <div class="features">
         <h3>Main Features:</h3>
