--- a/index.html
+++ b/index.html
@@ -68,6 +68,34 @@
   </div>
   <hr>
   <div id="updates">
+  <div id="U65">
+      <div class="header">
+        <h2>Update 65: Paws and Peril</h2>
+        <p>Dec 6th, 2023</p>
+      </div>
+      <div class="features">
+      </div>
+      <div class="balance">
+      </div>
+      <div class="bugfixes">
+        <h3>Bugfixes:</h3>
+        <ul>
+          <li>Legendary loot in Chronoscope Rewound now appears with its proper Mythic and Reaper bonuses.</li>
+          <li>Core 1 of Dire Thaumaturge now correctly provides its maximum Spell Points while in Reaper difficulty.</li>
+          <li>Fixed the tooltip of the Icon of the Lord of Blades.</li>
+          <li>Removed weird extra tooltip info from Kensei's improved dodge</li>
+          <li>The W score of some Gianthold raid items has been adjusted.</li>
+          <li>Fixed a ton of typos in recent quest dialogues and effects</li>
+          <li>The tooltip for Nightmare Lance is now more accurate</li>
+          <li>Hood of Unrest now has a 10 minute cooldown. It also has a better icon and description.</li>
+        </ul>
+      </div>
+      <div class="engineering">
+      </div>
+    </div>
+    
+    <hr>
+    
     <div id="U64">
       <div class="header">
         <h2>Update 64: Chronoscope Rewound</h2>
@@ -2521,7 +2549,7 @@
       <div class="engineering">
         <h3>Engineering:</h3>
         <ul>
-        <li>Feats are now organized by Category in the Character Sheet.</li>
+          <li>Feats are now organized by Category in the Character Sheet.</li>
         </ul>
       </div>
     </div>
