Added in changes by year to the statistics section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <div id="GraphSection" style="display:none;">
     <hr>
     <div id="Graph"></div>
+    <div id="Graph3"></div>
     
     <h2>Statistics and Analysis</h2>
     <p id="StatsHeader">I have contributed to <span class="value">$VALUE1$</span> total changes across <span class="value">$VALUE2$</span> updates. Of those...</p>
