--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <p>Dec 6th, 2023</p>
       </div>
       <div class="features">
+        <ul>
+          <li class="patch">New Set Augments are available at the Cauldron of Cadence in the Hut from Beyond!</li>
+        </ul>
       </div>
       <div class="balance">
       </div>
@@ -89,6 +92,7 @@
           <li>Fixed a ton of typos in recent quest dialogues and effects</li>
           <li>The tooltip for Nightmare Lance is now more accurate</li>
           <li>Hood of Unrest now has a 10 minute cooldown. It also has a better icon and description.</li>
+          <li class="patch">The Hood of Unrest is now using its correct cooldown timer.</li>
         </ul>
       </div>
       <div class="engineering">
