trying to fix a linkedin link ingester problem

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Q's Contributions</title>
@@ -2783,3 +2785,4 @@
     </div>
   </div>
 </body>
+</html>
