--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
           <li>Primal Avatar's Core 3 now adjusts Protection from Elements that you cast and not versions of the spell that affect you.</li>
           <li>Carrion Swarm has had a visual bug fixed so you have a unique channel per originator.</li>
           <li>Fixed many small text errors and typos.</li>
+          <li class="patch">Daunting Roar should no longer paralyze party members nor yourself.</li>
         </ul>
       </div>
       <div class="engineering">
